# adk-learning

./: README.md  main.py  pyproject.toml
calculation_agent/: agent.py
callbacks/before_after_agent/: agent.py
callbacks/before_after_tool/: .env  agent.py
email_agent/: agent.py
greeting_agent/: agent.py
lifecoach_agent/: agent.py
lite_llm_agent/: agent.py
loop-agent/linkedin_post_agent/: agent.py
loop-agent/linkedin_post_agent/sub_agent/post_generate/: agent.py
loop-agent/linkedin_post_agent/sub_agent/post_refiner/: agent.py
loop-agent/linkedin_post_agent/sub_agent/post_reviewer/: agent.py
multi-agent/manager/: agent.py
multi-agent/manager/sub_agents/funny_nerd/: agent.py
multi-agent/manager/sub_agents/news_analyst/: agent.py
multi-agent/manager/sub_agents/stock_analyst/: agent.py
multi-agent/manager/tools/: tools.py
parallel-agent/system_monitor_agent/: agent.py
parallel-agent/system_monitor_agent/sub_agent/cpu_info_agent/: agent.py
parallel-agent/system_monitor_agent/sub_agent/disk_info_agent/: agent.py
parallel-agent/system_monitor_agent/sub_agent/memory_info_agent/: agent.py
parallel-agent/system_monitor_agent/sub_agent/synatizer_agent/: agent.py
selecttemplate_agent/: agent.py  template_service_client.py
sequential-agent/lead_qualification_agent/: agent.py
session-and-state-runner/: basic_statefull_session.py
session-and-state-runner/question_answering_agent/: agent.py
statefull-multi-agent/: main.py  utils.py
statefull-multi-agent/customer_service_agent/: agent.py
tool_agent/: agent.py
(+9 files in other folders)
